Rollback (overflow issue still active)

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -34,7 +34,7 @@ nav {
    bottom:   0;
    color:    #ddd;
    margin:   auto;
-   position: sticky;
+   position: fixed;
    width:    100%;
    height:   10%;
 }
